# telcon-iec60870

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
crates/iec60870/: Cargo.toml
crates/iec60870-proto/: Cargo.toml
crates/iec60870-proto/src/: error.rs  lib.rs
crates/iec60870-proto/src/asdu/: cot.rs  envelope.rs  header.rs  ie.rs  io_list.rs  mod.rs  payload.rs
crates/iec60870-proto/src/asdu/types/: command.rs  file.rs  mod.rs  monitor.rs  system.rs
crates/iec60870-proto/src/file_transfer/: mod.rs  session.rs
crates/iec60870-proto/src/frame101/: codec.rs  control.rs  frame.rs  link.rs  mod.rs
crates/iec60870-proto/src/frame104/: apdu.rs  codec.rs  mod.rs  seq.rs  state.rs
crates/iec60870-test-tools/: Cargo.toml  README.md
crates/iec60870-test-tools/src/: cache.rs  control.rs  lib.rs  points.rs  sim.rs  transport.rs  wire.rs
crates/iec60870-test-tools/tests/: loopback_ctl.rs
crates/iec60870-test-tools/tests/specs/: SPECS.md  lib.sh  run_all.sh  test_01_smoke.sh  test_02_point_types.sh  test_03_interrogation_general.sh  test_04_interrogation_group.sh  test_05_commands.sh  test_06_spontaneous.sh  test_07_file_transfer.sh  test_08_lifecycle.sh  test_09_failures.sh  test_10_deadband_suppresses_small_drift.sh  test_11_deadband_gi_reports_latest.sh  test_12_deadband_set_still_emits.sh
crates/iec60870/examples/: client_104.rs  client_104_tls.rs  file_get.rs  file_serve.rs  master_101.rs  outstation_101.rs  server_104.rs  server_104_deadband.rs  server_104_tls.rs  wire_capture.rs
crates/iec60870/src/: client104.rs  deadband.rs  driver.rs  driver101.rs  error.rs  handler.rs  lib.rs  master101.rs  outstation101.rs  policy.rs  redundancy.rs  serial.rs  server104.rs  tls.rs  transport.rs
crates/iec60870/src/file_transfer/: events.rs  fs.rs  mod.rs  provider.rs  service.rs
crates/iec60870/src/security/: ip_filter.rs  mod.rs  tls_config.rs  verifier.rs
crates/iec60870/tests/: deadband_props.rs  ip_filter.rs  loopback.rs  loopback_101.rs  loopback_file_transfer.rs  loopback_mtls.rs  oversized_asdu.rs  redundancy.rs
docs/: protocol-notes.md
docs/superpowers/plans/: 2026-05-23-hysteresis-deadband.md
docs/superpowers/specs/: 2026-05-23-hysteresis-deadband-design.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: apdu_decode.rs  asdu_decode.rs  asdu_decode_101.rs  frame101_decode.rs  state_machine.rs
