[workspace]
resolver = "2"
members = [
    "crates/iec60870-proto",
    "crates/iec60870",
]

[workspace.package]
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.83"
authors = ["Jan Fietz <jan@jan-fietz.de>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/janfietz/iec60870"
homepage = "https://github.com/janfietz/iec60870"
readme = "README.md"
keywords = ["iec60870", "scada", "telecontrol", "iec104", "iec101"]
categories = ["network-programming", "embedded", "encoding"]

[workspace.dependencies]
# Internal
iec60870-proto = { version = "0.1.0-dev", path = "crates/iec60870-proto" }

# Errors / logging
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Bytes / time
bytes = "1"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "net", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }

# TLS (feature-gated by consumers)
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "2"

# Serial
tokio-serial = "5"

# Test deps
proptest = "1"
tokio-test = "0.4"

# Examples / binaries
anyhow = "1"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = false

[profile.dev]
opt-level = 0
debug = true
